HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureMoveCaptureImmovable/Expected.uv
//! Expected diagnostic metadata for the ClosureMoveCaptureImmovable rejected-source specimen.

expectedDiagnostic("E-MEM-3006", "rule.16.B-Closure-MoveCapture-Immovable-Err")
